Adjust success status codes
